Added the fitness site to the main site.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "customised",
         "flexbox",
         "optimisation",
-        "Optimise"
+        "Optimise",
+        "specialise"
     ]
 }
